--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* General */
 :root{
     --white: #FFFFFF;
     --black: #000000;
@@ -19,6 +20,8 @@ body {
     display: none;
 }
 
+/* Nanbar (general) ==================================================================== */
+
 nav {
     display: flex;
     justify-content: space-between;
@@ -28,6 +31,7 @@ nav {
 
 .menu {
     display: none;
+    cursor: pointer;
 }
 
 .logo {
@@ -89,7 +93,7 @@ nav {
 }
 
 
-/* Desktop-menu ccs de clase 7 */
+/* Menu en desktop (clase 7) =========================================================== */
 
 .desktop-menu{
     position: absolute;
@@ -135,6 +139,52 @@ nav {
 }
 
 
+/* Menu en mobile (clase 8)   ============================================================== */
+
+.mobile-menu {
+    position: absolute;
+    top: 60px;
+    padding: 24px;
+}
+
+.mobile-menu a {
+    text-decoration: none;
+    color: var(--black);
+    font-weight: bold;
+    /*margin-bottom: 24px;*/
+}
+
+.mobile-menu ul {
+    padding: 0;
+    margin: 24px 0 0;
+    list-style: none;
+}
+
+.mobile-menu ul:nth-child(1){
+    border-bottom: 1px solid var(--very-light-pink);
+}
+
+/* .mobile-menu ul:nth-child(3) {
+    position: absolute;
+    bottom: 0;
+} */
+
+.mobile-menu ul li {
+    margin-bottom: 24px;
+}
+
+.email {
+    font-size: var(--sm);
+    font-weight: 300 !important;
+}
+
+.sing-out {
+    font-size: var(--sm);
+    color: var(--hospital-green) !important;
+}
+
+
+
 
 @media (max-width: 640px) {
     .menu {
@@ -147,4 +197,14 @@ nav {
     .navbar-email {
         display: none;
     }
+
+    .desktop-menu {
+        display: none;
+    }
+}
+
+@media (min-width: 641px) {
+.mobile-menu{
+    display: none;
+}
 }
